mule-user-guide/v/3.2/wsdl-connectors.adoc
=  WSDL连接器

AXIS和 link:/mule-user-guide/v/3.2/cxf-module-reference[CXF]传输提供了WSDL连接器，可以通过获取服务WSDL来调用远程Web服务。 Mule为服务创建一个动态代理，然后调用它。

== 通用WSDL端点

通过WSDL端点，您可以在不 link:/mule-user-guide/v/3.2/consuming-web-services-with-cxf[生成一个客户端]的情况下轻松调用Web服务。在启动时，它会读取WSDL以确定如何在运行时调用远程Web服务。当消息通过WSDL端点发送时，它可以使用消息有效载荷和WSDL中预期有效载荷格式的知识来构造SOAP消息。

您必须提供要调用的服务的WSDL的完整URL，并且您必须提供一个`method`参数来告诉Mule在服务上调用哪个操作：

[source, code, linenums]
----
wsdl:http://www.webservicex.net/stockquote.asmx?WSDL&method=GetQuote
----

WSDL URL前缀为`wsdl:`。 Mule会检查您的类路径，以查看是否有可用于从WSDL创建客户端代理的WSDL提供程序。 Mule支持Axis和CXF作为WSDL提供者。如果你想使用特定的，你可以在URL上指定它，如下所示：

[source, code, linenums]
----
wsdl-cxf:http://www.webservicex.net/stockquote.asmx?WSDL&method=GetQuote
----

要么

[source, code, linenums]
----
wsdl-axis:http://www.webservicex.net/stockquote.asmx?WSDL&method=GetQuote
----

一般来说，您应该使用CXF WSDL端点。 CXF WSDL提供程序的一个限制是它不允许您使用非Java基元（不是String，int，double等的对象）。有时Axis WSDL生成将不起作用（使用不正确的名称空间），因此您可以尝试每个生成最佳的工作。

请注意，在WSDL端点上没有设置特定的变换器。

== 指定一个可选的WSDL位置

默认情况下，WSDL提供程序将通过获取端点地址并向其添加`?wsdl`来查找您的WSDL。通过CXF传输，您可以选择指定WSDL的位置，这与使用`?wsdl`参数指定的位置不同。在WSDL不能以正常方式使用的情况下，这可能很有用，因为SOAP引擎不提供它或者提供程序不想公开公开地公开WSDL。

在这些情况下，您可以按如下方式指定CXF端点的`wsdlLocation`属性：

[source, xml, linenums]
----
<endpoint
  address="wsdl-cxf:http://localhost:8080/book/services/BookService?method=getBooks">
 <properties>
  <property name="wsdlLocation" value="file:///c:/BookService.wsdl"/>
 </properties>
</endpoint>
----

在这种情况下，WSDL CXF端点像通常一样工作，除了它从本地驱动器读取WSDL。

==  CXF WSDL端点示例

本示例演示如何从控制台获取多个参数，调用Web服务并将输出打印到屏幕。

此服务需要两个参数："from"货币代码和"to"货币代码。当CXF调度程序准备调用服务的参数时，它期望找到`Object[]`的消息负载 - 即一个Object数组。在货币转换器的情况下，这应该是由两个对象组成的数组 -  "from"货币和"to"货币。

有几种方法来构造这个对象数组，但最简单的方法是使用自定义转换器 http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transformer/simple/StringToObjectArray.html[StringToObjectArrayTransformer]，它将分隔字符串转换为对象数组。在下面的示例中，只需键入格式为`<fromCurrency>,<toCurrency>`的字符串即可。

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:spring="http://www.springframework.org/schema/beans"
      xmlns:stdio="http://www.mulesoft.org/schema/mule/stdio"
      xsi:schemaLocation="
        http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.2/mule.xsd
        http://www.mulesoft.org/schema/mule/stdio http://www.mulesoft.org/schema/mule/stdio/3.2/mule-stdio.xsd
        http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.0.xsd">

    <stdio:connector name="stdioConnector" promptMessage="Enter from and to currency symbols, separated by a comma:"/>

    <flow name="inputService">
        <stdio:inbound-endpoint system="IN"/>
        <custom-transformer class="org.mule.transformer.simple.StringToObjectArray">
            <spring:property name="delimiter" value=","/>
        </custom-transformer>
        <outbound-endpoint address="wsdl-cxf:http://www.webservicex.net/CurrencyConvertor.asmx?WSDL&amp;method=ConversionRate"/>
        <stdio:outbound-endpoint system="OUT"/>
    </flow>
</mule>
----

例如，输入"EUR,USD"即可将欧元兑换率转换为美元，您将得到如下所示的结果：

[source, code, linenums]
----
Enter from and to currency symbols, separated by a comma:
EUR,USD
1.3606
----
